tests/Rules/Forms/Fixtures/valid/input_hidden.html.twig
<html>
<body>
html<input type="hidden" name="token" value="abc">
</body>
</html>
