tests/Rules/Forms/Fixtures/invalid/input_no_label.html.twig
{# 1 errors #}
<html>
<body>
<input type="text" />
</body>
</html>
